feat(backend/property): add listing expiry and renewal
- Add expires_at and expiry_warning_sent columns to properties table
  with a partial index on active listings; add last_login_at to users
- Add durationMonths to CreatePropertyRequest; set expiresAt on creation
- Expose expiresAt in PropertyItemDto and PropertyListItemDto
- Add findExpired and findExpiringUnwarned repository queries
- Add PropertyExpiryJob: daily job that marks expired listings inactive
  and sends per-owner digest emails after commit
- Add renew() service method and POST /{id}/renew endpoint to extend
  or reactivate a listing (resets expiryWarningSent)
- Add sendListingExpiryWarningEmail and sendListingExpiredEmail templates

Signed-off-by: Nikita Kuprins <nikita.kuprins@gmail.com>